Moving spanish resources to the root for publishing

--- a/moreGates.html
+++ b/moreGates.html
@@ -7,10 +7,11 @@
 <div class="wrap">
 <ul>
  <li><a href="Binary.html"><b>SimpleCPU.com</b></a>&nbsp;&nbsp;</li>
- <li><a href="about.html">about</a></li>
+ <li><a href="about.html">acerca de</a></li>
 </ul><br>
 <div class="content">
-Before we can continue, I need to show you some more logic gates.<br>
+Antes de seguir, necesito que conozcas algunas otras compuertas l&oacute;gicas.
+<br>
 <canvas id="gates" width="550" height="570"></canvas><br>
 <div class="center">
 <a href="memory.html">
