--- a/about.html
+++ b/about.html
@@ -37,6 +37,9 @@ Gastos de servidores, dinero para cervezas, etc.<br>
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
 
+<h3>Traducci&oacute;n</h3>
+Traducido al espa&ntilde;ol por <a href="http://github.com/mgarciaisaia" style="color: #0000AA">@mgarciaisaia</a>. En <a href="http://github.com/mgarciaisaia/simplecpu" style="color: #0000AA">este repo</a>.
+
 <br>
 </div>
 </div>
